public/stylesheets/player.css
/* CSS reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* Use border-box */
html {
	box-sizing: border-box;
}
*, *:before, *:after {
	box-sizing: inherit;
}


/* Custom fonts */
@font-face {
	font-family: CharisSILW;
	src: url(/fonts/CharisSIL-R.woff);
}
@font-face {
	font-family: CharisSILW;
	font-style: italic;
	src: url(/fonts/CharisSIL-I.woff);
}
@font-face {
	font-family: CharisSILW;
	font-weight: bold;
	src: url(/fonts/CharisSIL-B.woff);
}
@font-face {
	font-family: CharisSILW;
	font-weight: bold;
	font-style: italic;
	src: url(/fonts/CharisSIL-BI.woff);
}


html, button, input[type=text] {
	font-family: CharisSILW, Georgia, 'Times New Roman', serif;
	color: #e5e5e5;
}

html, body {
	height: 100%;
	width: 100%;
	font-size: 14px;
}

h1 {
	font-size: 24px;
	font-weight: bold;
	margin: 18px 0;
}

h2 {
	font-size: 17px;
	margin: 14px 0;
}

p, .videoCaption {
	margin: 5px 0;
}

a {
	color: #8FB2E8;
}

i {
	font-style: italic;
}

br {
	display: block;
}

.videoCaption {
	position: relative;
	width: 100%;
	padding-bottom: 56.25%;
}
.videoCaption object,
.videoCaption embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.cudl-metadata-title a {
	text-decoration: none;
	color: inherit;
}
.cudl-metadata-title a:hover {
	text-decoration: underline;
}


.cudl-metadata-authors {
	font-size: 14px;
}

.cudl-author {
	font-size: 17px;
}

.cudl-copyright-statement {
	font-size: 0.8em;
	margin: 1.5em 0;
}

.cudl-viewer {
	overflow: hidden;
	background: #000000;
}

.cudl-viewer header {

  	overflow: hidden;
	position: absolute;
	z-index: 3;
	width: 100%;

	border-bottom: 1px solid #535353;
	background:
		linear-gradient(
			to top,
			rgba(255, 255, 255, 0.08) 0%,
			rgba(255, 255, 255, 0) 6px),
		rgba(0, 0, 0, 0.88);
	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.35);

	/* TODO: ensure contents match this */
	height: 32px;
}

.cudl-ucam-logo {
	background: url("/images/player/cam-logo-header.png") no-repeat;
	width: 100px;
	height: 24px;
	display: inline-block;
	margin: 5px 0 0 6px;

	position: relative;
	z-index: 4;
}

.cudl-logo {
	width: 49%;
	padding-right: 5px;
}

.cudl-cul-logo {
	padding-left: 5px;
	width: 49%;
}

.cudl-page-position {
	text-align: center;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	padding: 3px 0 0 0;
	z-index: 3;
}
.cudl-page-position > * {
	vertical-align: baseline;
}
.cudl-page-position .cudl-btn {
	margin: 0 6px;
}
.cudl-img-number {
	min-width: 2.5em;
	display: inline-block;
}

/* The img/page number input which looks like regular text while not being
   interacted with. */
.cudl-img-current {
	margin-right: 3px;
	text-align: right;
	/*cursor: pointer;*/
	border-bottom: 1px solid #858585;
	width: 2.5em;
	padding: 0;

	/* Override input styling to look like regular text */
	background: none;
	border: 1px transparent;
	border-radius: 3px;

	transition: background 0.1s, border 0.1s;
}
.cudl-img-current:hover, .cudl-img-current:focus {
	background: #ececec;
	color: #3b3b3b;
}
.cudl-img-current:hover:not(:focus) {
	background: #e1e1e1;
	box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.35),
				0 0 5px 2px rgba(255, 255, 255, 0.5);
	border: 1px solid #e1e1e1;
}
.cudl-img-current:focus {
	outline: none;
	box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.35),
				0 0 5px 2px rgba(72, 147, 232, 0.5);
	border: 1px solid #61a8f1
}
.cudl-img-last {
	margin-left: 3px;
	text-align: left;
}




.cudl-viewer-content {
	height: 100%;
	/*position: relative;*/
	padding: 0;
}
.cudl-viewer-metadata {
	/* Position on the right, under the header bar. */
	position: absolute;
	right: 0;
	top: 32px;
	bottom: 0;
	width: 320px;

	transition: right 0.8s cubic-bezier(0.23, 1, 0.32, 1);
}
.cudl-viewer-metadata.hidden {
	right: -304px;
}

.cudl-viewer-metadata-container {
	background-color: rgba(0, 0, 0, 0.88);
	border-left: 1px solid #535353;
	background: linear-gradient(
			to right,
			rgba(255, 255, 255, 0.08) 0%,
			rgba(255, 255, 255, 0) 10px),
	rgba(0, 0, 0, 0.88);
	box-shadow: -4px 0px 5px 0 rgba(0, 0, 0, 0.35);

	padding: 0 18px 18px 18px;
	-webkit-overflow-scrolling: touch;
	overflow-y: auto;
	width: 100%;
	height: 100%;

	/* Raise above hide button */
	position: relative;
	z-index: 2;
}

.cudl-viewer-metadata-container footer {
	border-top: 1px solid #626262;
	padding-top: 12px;
}

.cudl-viewer-player {
	height: 100%;
	width: 100%;
}

.cudl-viewer-buttons {
	position: absolute;
	left: 10px;
	bottom: 10px;
	opacity: 0.5;
}
.cudl-viewer-buttons:hover {
	opacity: 1;
}
.cudl-viewer-buttons .cudl-btn {
	margin: 4px;
}

.cudl-btn {
	border: 1px solid #a7a7a7;
	background: rgba(41, 41, 41, 0.8);
	border-radius: 4px;
	color: white;
	width: 24px;
	height: 24px;
	padding: 0;
	box-shadow: 0px 4px 5px 0 rgba(0, 0, 0, 0.35);
	cursor: pointer;
}
.cudl-btn:focus {

}
.cudl-btn:hover {

}
.cudl-btn:active {
	background: #d09d02;
}

.cudl-metadata-toggle-btn {
	position: absolute;
	top: 150px;
	left: 0;
	height: auto;
	width: auto;
	border-radius: 0 0 3px 3px;
	border-top: none;
	padding: 0px 5px;
	-ms-transform: translate(-31px) rotate(90deg);
	transform: translate(-31px) rotate(90deg);
	box-shadow: 4px 0px 5px 0 rgba(0, 0, 0, 0.35);
	z-index: 1;
	min-height: 22px;
}
.cudl-metadata-toggle-btn:before {
	content: "Hide";
}
.hidden .cudl-metadata-toggle-btn:before {
	content: "Show";
}
/*
#metadata {
	height: 100%;
	margin: 0 5px 0 20px;
	-webkit-overflow-scrolling: touch;
  	overflow-y: auto;
  	padding-right: 59px;
  	position: absolute;
  	top: 0;
}
*/

